# PaidySimpleRestaurantApi

./: Cargo.toml  README.md
restaurant/: Cargo.toml
restaurant-fakeclient/: Cargo.toml
restaurant-fakeclient/src/: main.rs
restaurant-webapi/: Cargo.toml
restaurant-webapi/src/: main.rs  ver.rs
restaurant-webapi/src/ver/: v1.rs  v2.rs
restaurant-webapi/src/ver/v1/: menu_items.rs  orders.rs  tables.rs
restaurant/src/: layout.rs  lib.rs  mem_repo.rs  memdb.rs  menu.rs  order.rs  ordering.rs
restaurant/tests/: ordering.rs
restaurant/tests/common/: mod.rs  order_repository.rs  static_repository.rs
