[package]
name = "restaurant-fakeclient"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
