[package]
name = "restaurant-webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
# clap = "4.5.8"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
restaurant = { version = "0.1.0", path = "../restaurant"}
chrono = "0.4.38"
anyhow = "1.0.86"
